[package]
name = "keyboard-chords"
authors = ["jmpnull <jumpnull@proton.me>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A crate for windows input events"
repository = "https://github.com/jmpnull/keyboard-chords"

[dependencies]
futures = "0.3"
rand = "0.9.1"
tokio = { version = "1", features = [
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
] }

[dependencies.windows]
version = "0.34.0"
features = ["Win32_UI_Input_KeyboardAndMouse"]
